# postmaniac

./: .gitignore  Dockerfile  README.md  flywire.txt  keywords.txt  postmaniac.py  pyproject.toml  requirements.txt  setup.py  useragents.txt
.github/workflows/: codeql.yml
postmaniac/: postmaniac.py  scan-flywire.txt
